--- a/DashboardArtifact3Updated.ipynb
+++ b/DashboardArtifact3Updated.ipynb
@@ -48,11 +48,12 @@
     "# Data Manipulation / Model\n",
     "###########################\n",
     "# FIX ME update with your username and password and CRUD Python module name\n",
+    "# confidential SNHU server credentials removed
     "\n",
-    "username = \"AACuser\"\n",
-    "password = \"SNHU1\"\n",
-    "hostName = 'nv-desktop-services.apporto.com'\n",
-    "portNumber = 31356\n",
+    "username = \"****user\"\n",
+    "password = \"******\"\n",
+    "hostName = '******-*********.*******.***'\n",
+    "portNumber = ****\n",
     "\n",
     "# Connect to database via CRUD Module\n",
     "db = AnimalShelter(username, password, hostName, portNumber) \n",
