--- a/DashboardArtifact3Updated.ipynb
+++ b/DashboardArtifact3Updated.ipynb
@@ -48,7 +48,7 @@
     "# Data Manipulation / Model\n",
     "###########################\n",
     "# FIX ME update with your username and password and CRUD Python module name\n",
-    "# confidential SNHU server credentials removed
+    "# confidential SNHU server credentials removed",
     "\n",
     "username = \"****user\"\n",
     "password = \"******\"\n",
